--- a/src/App.css
+++ b/src/App.css
@@ -45,13 +45,15 @@
 .position{
   display: flex;
   position: relative;
-  left:1100px;
-  top:35px;
+  left:1000px;
+  top:30px;
 }
 
 .line{
   text-decoration: none;
   color:#282c34;
+  font-size: 20px;
+  font-weight: bold;
 }
 .line:hover{
   color:aliceblue;
