--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
+@font-face {
+  font-family: 'DalseoHealingBold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2207-01@1.0/DalseoHealingBold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+body{
+  font-family: 'DalseoHealingBold';
+}
+
 .App {
   text-align: center;
 }
